--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.19",
         "laravel/tinker": "^2.9",
-        "socialiteproviders/microsoft": "^4.6"
+        "socialiteproviders/microsoft": "^4.6",
+        "twilio/sdk": "^8.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
