Stories and Profile views introduced

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
-        "chart.js": "^4.4.8"
+        "chart.js": "^4.4.8",
+        "lucide": "^0.503.0"
     }
 }
