--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "lesstif/php-jira-rest-client": "^5.10",
         "socialiteproviders/atlassian": "^4.0",
+        "socialiteproviders/github": "^4.1",
         "socialiteproviders/manager": "^4.8",
         "socialiteproviders/microsoft": "^4.6",
         "twilio/sdk": "^8.5"
