--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@codemirror/commands": "^6.8.1",
+        "@codemirror/lang-javascript": "^6.2.3",
+        "@codemirror/lang-python": "^6.2.0",
+        "@codemirror/language": "^6.11.0",
+        "@codemirror/search": "^6.5.10",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/theme-one-dark": "^6.1.2",
+        "@codemirror/view": "^6.36.7",
         "alpinejs": "^3.14.9",
         "chart.js": "^4.4.8",
         "lucide": "^0.503.0"
