--- a/docker/selenium-python/Dockerfile
+++ b/docker/selenium-python/Dockerfile
@@ -15,13 +15,17 @@ RUN apt-get update -qqy \
        fonts-freefont-ttf \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
+# Create and update requirements.txt with pytest directly
+RUN echo "selenium>=4.11\nwebdriver-manager>=4.0\npytest>=7.0\npytest-selenium>=4.0.0" > requirements.txt
+
 # Install Python dependencies
-COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy test files and set working directory
-COPY . /tests
+# Add pytest installation verification
+RUN python -c "import pytest; import selenium; print(f'Pytest version: {pytest.__version__}'); print(f'Selenium version: {selenium.__version__}')"
+
+# Set up work directory
 WORKDIR /tests
 
-# Set entrypoint with recommended Chrome flags
-ENTRYPOINT ["python", "-u", "your_tests.py"]
+# Default entrypoint that can be overridden
+ENTRYPOINT ["python", "-m", "pytest"]
